# ts-native

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/ast/: ASTNode.cpp  ASTNode.h  FunctionNode.cpp  FunctionNode.h  LetNode.cpp  LetNode.h  RootScope.cpp  RootScope.h  Scope.cpp  Scope.h
src/ast/expression/: Constant.cpp  Constant.h  Expression.cpp  Expression.h  Variable.cpp  Variable.h
src/ast/helpers/: Type.cpp  Type.h
src/lexing/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/parsing/: InvalidToken.cpp  InvalidToken.h  Parser.cpp  Parser.h  UnexpectedVariable.cpp  UnexpectedVariable.h
test/: CMakeLists.txt  lexer_tests.cpp  main.cpp  parser_tests.cpp  test1.cpp
